--- a/educastick/teachersPage/static/css/stylegroups.css
+++ b/educastick/teachersPage/static/css/stylegroups.css
@@ -191,17 +191,23 @@ main{
 }
 
 .close_choose{
+  cursor: pointer;
   position: absolute;
-  z-index: 55;
+  background-color: #222222;
+  color: white;
+  text-align: center;
+  line-height: 48px;
+  z-index: 80;
   top: 0;
   right: 0;
-  height: 46px;
-  width: 46px;
+  height: 48px;
+  width: 48px;
 }
 
 .find_element{
+  border-color: #222222;
   width: 98%;
-  height: 40px;
+  height: 42px;
   font-size: 20px;
 }
 
