Добавил функцию для кнопки загрузки ответов на странице тестов, плюс картинку плюса заменил и добавил картинку возврата

--- a/educastick/teachersPage/templates/tests.html
+++ b/educastick/teachersPage/templates/tests.html
@@ -56,13 +56,26 @@
         <input type="text" disabled class="inner_text" value="Русский язык">
         <input type="text" disabled class="inner_text" value="Контрольный тест">
         <div class="crud_butts">
-          <button class="crud_but add_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+          <button class="crud_but add_answer_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
           <button class="crud_but edit_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
           <button class="crud_but del_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
         </div>
 
       </div>
-
+<!--<div class="active_element">
+  <a href="" class="statistic_href">Статистика</a>
+        <div class="active_text">
+          <p>Модуль: Части речи</p>
+          <p>Тема: Глаголы</p>
+          <p>Вопросы:</p>
+          <ul type="none">
+            <li>Вопрос 1</li>
+            <li>Ответ:</li>
+            <li>Вопрос 2</li>
+            <li>Ответ:</li>
+          </ul>
+        </div>
+      </div>-->
       <!--<div class="active_element">
         <form action="" name="send_answer">
         <div class="active_text">
@@ -97,7 +110,7 @@
         <input type="text" disabled class="inner_text" value="Русский язык">
         <input type="text" disabled class="inner_text" value="Контрольный тест">
         <div class="crud_butts">
-          <button class="crud_but add_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+          <button class="crud_but add_answer_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
           <button class="crud_but edit_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
           <button class="crud_but del_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
         </div>
