--- a/educastick/teachersPage/static/css/stylegroups.css
+++ b/educastick/teachersPage/static/css/stylegroups.css
@@ -41,7 +41,7 @@ main{
   height: 33px;
 }
 
-.add_but{
+.add_answer_but{
   background-color: #86e586;
 }
 
@@ -63,7 +63,7 @@ main{
 }
 
 .crud_but_img{
-  height: 100%;
+  height: 80%;
   object-fit: contain;
   margin: 0;
 }
@@ -126,6 +126,18 @@ main{
   color: white;
   padding: 10px;
   margin-top: 15px;
+}
+
+.statistic_href{
+  float: right;
+  display: block;
+  width: 18%;
+  text-align: center;
+  height: 29px;
+  background-color: #222222;
+  color: white;
+  padding: 10px;
+  text-decoration: none;
 }
 
 #save_answer{
