--- a/educastick/teachersPage/templates/account.html
+++ b/educastick/teachersPage/templates/account.html
@@ -38,7 +38,7 @@
 
     <div class="personal_information">
 
-      <img src="{% static 'images/placeholder-man.png'%}" alt="">
+      <img src="{% static 'images/placeholder-man.png'%}" alt="" class="account_img">
 
       <div class="information">
         <p>ФИО</p>
