--- a/educastick/teachersPage/static/css/header.css
+++ b/educastick/teachersPage/static/css/header.css
@@ -1,27 +1,28 @@
 header {
   position: sticky;
   top: 0;
-  height: 85px;
+  height: 70px;
   width: 100%;
   z-index: 99;
-  background-color: #222222;
+  background-color: #47ad48;
+  box-shadow: 0 0 10px -1px black;
   display: grid;
-  grid-column-gap: 20px;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: 85px;
+  grid-template-rows: 75px;
 
 }
 .abutt{
   grid-column: 2 / 8;
-  align-self: center;
+  align-self: stretch;
   display: grid;
-  grid-gap: 20px;
+  text-align: center;
+  line-height: 70px;
   grid-template-columns: repeat(4, 1fr);
-  justify-items: center;
+  justify-items: stretch;
 }
 .ava, .logo {
   justify-self: center;
-  align-self: center;
+  margin-top: 5px;
 }
 header a {
   text-decoration: none;
@@ -29,23 +30,35 @@ header a {
   font-size: 15pt;
 }
 
-#ava, #logo {
-  width: 60px;
+#logo {
+  height: 55px;
+}
+
+#logo:hover{
+  height: 60px;
 }
 
 #ava {
+  height: 53px;
   border: 2px solid white;
   border-radius: 50%;
 }
 
-a:hover {
-  text-decoration: underline;
+#ava:hover {
+  height: 58px;
+}
+
+.abutt a:hover {
+  text-decoration: none;
+  background-color: #86e586;
   font-weight: bold;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 footer{
   grid-area: footer;
-  background-color: #222222;
+  background-color: #434242;
 }
 
 @media (max-width: 550px) {
