--- a/educastick/teachersPage/templates/tests.html
+++ b/educastick/teachersPage/templates/tests.html
@@ -2,166 +2,183 @@
 {% load static %}
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Тесты</title>
-  <link rel="stylesheet" href="{% static 'css/normalize.css'%}">
-  <link rel="stylesheet" href="{% static 'css/main.css'%}">
-  <link rel="stylesheet" href="{% static 'css/header.css'%}">
-  <link rel="stylesheet" href="{% static 'css/style.css'%}">
-  <link rel="stylesheet" href="{% static 'css/stylegroups.css'%}">
-  <link rel="stylesheet" href="{% static 'css/stylefilter.css'%}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Тесты</title>
+    <link rel="stylesheet" href="{% static 'css/normalize.css'%}">
+    <link rel="stylesheet" href="{% static 'css/main.css'%}">
+    <link rel="stylesheet" href="{% static 'css/header.css'%}">
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <link rel="stylesheet" href="{% static 'css/stylegroups.css'%}">
+    <link rel="stylesheet" href="{% static 'css/stylefilter.css'%}">
 </head>
 <body>
 <img src="{% static 'images/goBack.png'%}" alt="" id="hidden_goBackImg" hidden>
+<img src="{% static 'images/plus.png'%}" alt="" id="hidden_plusImg" hidden>
 <header>
-  <div class="logo">
-    <a href="index.html"><img src="{% static 'images/logo.png'%}" id="logo" alt=""></a>
-  </div>
-  <div class="abutt">
-    <a href="#">Статистика</a>
-    <a href="#">Группы</a>
-    <a href="#">Тесты</a>
-    <a href="#">Ответы</a>
-  </div>
-  <div class="ava">
-    <img src="{% static 'images/placeholder-man.png'%}" alt="" id="ava">
-  </div>
+    <div class="logo">
+        <a href="index.html"><img src="{% static 'images/logo.png'%}" id="logo" alt=""></a>
+    </div>
+    <div class="abutt">
+        <a href="#">Статистика</a>
+        <a href="#">Группы</a>
+        <a href="#">Тесты</a>
+        <a href="#">Ответы</a>
+    </div>
+    <div class="ava">
+        <a href="index.html"><img src="{% static 'images/placeholder-man.png'%}" alt="" id="ava"></a>
+    </div>
 </header>
 <div class="wrapper">
-  <div class="description_main">
-    <h1>Тесты</h1>
-    <div class="functional">
-      <button class="filter">< Год ></button>
-      <div class="search">
+    <div class="description_main">
+        <h1>Тесты</h1>
+        <div class="functional">
+            <button class="filter">< Год ></button>
+            <div class="search">
 
-        <form>
-          <input type="text" placeholder="Искать здесь...">
-          <button type="submit"></button>
-        </form>
+                <form>
+                    <input type="text" placeholder="Искать здесь...">
+                    <button type="submit"></button>
+                </form>
 
-      </div>
+            </div>
+
+        </div>
 
     </div>
+    <main>
+        <div class="main_list">
 
-  </div>
-  <main>
-    <div class="main_list">
+            <div class="element_add">
+                <img src="{% static 'images/plus.png'%}" alt="" class="plus">
+            </div>
 
-      <div class="element_add">
-        <img src="{% static 'images/plus.png'%}" alt="" class="plus">
-      </div>
+            <div class="element" id="1">
+                <input type="text" disabled class="inner_text" value="Тест">
+                <input type="text" disabled class="inner_text" value="Русский язык">
+                <input type="text" disabled class="inner_text" value="Контрольный тест">
+                <div class="crud_butts">
+                    <button class="crud_but add_answer_but"><img src="{% static 'images/plus.png'%}" alt=""
+                                                                 class="crud_but_img"></button>
+                    <button class="crud_but edit_but"><img src="{% static 'images/edit.png'%}" alt=""
+                                                           class="crud_but_img"></button>
+                    <button class="crud_but del_but"><img src="{% static 'images/delete.png'%}" alt=""
+                                                          class="crud_but_img"></button>
+                </div>
 
-      <div class="element" id="1">
-        <input type="text" disabled class="inner_text" value="Тест">
-        <input type="text" disabled class="inner_text" value="Русский язык">
-        <input type="text" disabled class="inner_text" value="Контрольный тест">
-        <div class="crud_butts">
-          <button class="crud_but add_answer_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
-          <button class="crud_but edit_but"><img src="{% static 'images/edit.png'%}" alt="" class="crud_but_img"></button>
-          <button class="crud_but del_but"><img src="{% static 'images/delete.png'%}" alt="" class="crud_but_img"></button>
+            </div>
+
+            <!--<div class="active_element">
+                <div class="active_text">
+                    <p><label>Модуль:
+                        <input type="text" name="moduleInput" class="input_text">
+                    </label></p>
+                    <p><label>Тема:
+                        <input type="text" name="themeInput" class="input_text">
+                    </label></p>
+                    <p>Вопросы:</p>
+                    <ol>
+                        <li>
+                            <p>
+                                <input type="text" name="1" class="input_text">
+                            </p>
+                            <p>
+                                <label>Правильный ответ:
+                                    <input type="text" name="1_1" class="input_text">
+                                </label>
+                            </p>
+                            <p>
+                                <label>Вариант ответа:
+                                    <input type="text" name="1_2" class="input_text">
+                                </label>
+                            </p>
+                             <button class="new_question_answer_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+                        </li>
+                        <li>
+                            <p>
+                                <input type="text" name="2" class="input_text">
+                            </p>
+                            <p>
+                                <label>Правильный ответ:
+                                    <input type="text" name="2_1" class="input_text">
+                                </label>
+                            </p>
+                             <button class="new_question_answer_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+                        </li>
+                    </ol>
+                </div>
+                <div class="edit_buttons">
+                    <button class="new_question_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+                    <button class="save_button">Сохранить</button>
+                </div>
+            </div>-->
+
+            <!--<div class="active_element">
+              <a href="" class="statistic_href">Статистика</a>
+                    <div class="active_text">
+                      <p>Модуль: Части речи</p>
+                      <p>Тема: Глаголы</p>
+                      <p>Вопросы:</p>
+                      <ul type="none">
+                        <li>Вопрос 1</li>
+                        <li>Ответ:</li>
+                        <li>Вопрос 2</li>
+                        <li>Ответ:</li>
+                      </ul>
+                    </div>
+                  </div>-->
+
+
+            <!--<div class="active_element">
+              <button class="go_back_button"><img src="{% static 'images/goBack.png'%}" alt="" class="plus"></button>
+              <form action="" name="send_answer">
+              <div class="active_text">
+                <p>Модуль: Части речи</p>
+                <p>Тема: Глаголы</p>
+              </div>
+              <div class="select_element">
+                <div class="element_add">
+                  Выбор группы
+                </div>
+                <div class="elements_choose">
+                  <input list="list_elements" id="find_element">
+                  <button class="close_choose">X</button>
+                  <datalist id="list_elements">
+                    <option value="Группа1">
+                    <option value="Группа2">
+                  </datalist>
+                </div>
+              </div>
+              <div class="active_butts">
+                <input type="date" class="download_button">
+                <input type="file" name="" id="" class="download_button">
+                <button class="download_button" id="save_answer">
+                  Сохранить ответы
+                </button>
+              </div>
+              </form>
+            </div>-->
+
+            <div class="element" id="2">
+                <input type="text" disabled class="inner_text" value="Тест 2">
+                <input type="text" disabled class="inner_text" value="Русский язык">
+                <input type="text" disabled class="inner_text" value="Контрольный тест">
+                <div class="crud_butts">
+                    <button class="crud_but add_answer_but"><img src="{% static 'images/plus.png'%}" alt=""
+                                                                 class="crud_but_img"></button>
+                    <button class="crud_but edit_but"><img src="{% static 'images/edit.png'%}" alt=""
+                                                           class="crud_but_img"></button>
+                    <button class="crud_but del_but"><img src="{% static 'images/delete.png'%}" alt=""
+                                                          class="crud_but_img"></button>
+                </div>
+            </div>
+
+
         </div>
-
-      </div>
-      
-      <div class="active_element">
-        <div class="active_text">
-          <p><label>Модуль:
-            <input type="text" name="moduleInput" class="input_text">
-          </label></p>
-          <p><label>Тема:
-            <input type="text" name="themeInput" class="input_text">
-          </label></p>
-          <p>Вопросы:</p>
-          <ol>
-            <li>
-              <p>
-                <input type="text" name="question1" class="input_text">
-              </p>
-              <p>
-                <label>Ответ:
-                  <input type="text" name="answer1" class="input_text">
-                </label>
-              </p>
-            </li>
-            <li>
-              <p>
-                <input type="text" name="question2" class="input_text">
-              </p>
-              <p>
-                <label>Ответ:
-                  <input type="text" name="answer2" class="input_text">
-                </label>
-              </p>
-            </li>
-          </ol>
-        </div>
-      </div>
-      
-<!--<div class="active_element">
-  <a href="" class="statistic_href">Статистика</a>
-        <div class="active_text">
-          <p>Модуль: Части речи</p>
-          <p>Тема: Глаголы</p>
-          <p>Вопросы:</p>
-          <ul type="none">
-            <li>Вопрос 1</li>
-            <li>Ответ:</li>
-            <li>Вопрос 2</li>
-            <li>Ответ:</li>
-          </ul>
-        </div>
-      </div>-->
-
-
-      <!--<div class="active_element">
-        <button class="go_back_button"><img src="{% static 'images/goBack.png'%}" alt="" class="plus"></button>
-        <form action="" name="send_answer">
-        <div class="active_text">
-          <p>Модуль: Части речи</p>
-          <p>Тема: Глаголы</p>
-        </div>
-        <div class="select_element">
-          <div class="element_add">
-            Выбор группы
-          </div>
-          <div class="elements_choose">
-            <input list="list_elements" id="find_element">
-            <button class="close_choose">X</button>
-            <datalist id="list_elements">
-              <option value="Группа1">
-              <option value="Группа2">
-            </datalist>
-          </div>
-        </div>
-        <div class="active_butts">
-          <input type="date" class="download_button">
-          <input type="file" name="" id="" class="download_button">
-          <button class="download_button" id="save_answer">
-            Сохранить ответы
-          </button>
-        </div>
-        </form>
-      </div>-->
-
-      <div class="element" id="2">
-        <input type="text" disabled class="inner_text" value="Тест 2">
-        <input type="text" disabled class="inner_text" value="Русский язык">
-        <input type="text" disabled class="inner_text" value="Контрольный тест">
-        <div class="crud_butts">
-          <button class="crud_but add_answer_but"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
-          <button class="crud_but edit_but"><img src="{% static 'images/edit.png'%}" alt="" class="crud_but_img"></button>
-          <button class="crud_but del_but"><img src="{% static 'images/delete.png'%}" alt="" class="crud_but_img"></button>
-        </div>
-      </div>
-
-
-
-    </div>
-  </main>
-  <footer>
-    footer
-  </footer>
+    </main>
+    <footer>
+        footer
+    </footer>
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
