--- a/educastick/teachersPage/templates/tests.html
+++ b/educastick/teachersPage/templates/tests.html
@@ -93,10 +93,12 @@
                                     <input type="text" name="1_2" class="input_text">
                                 </label>
                             </p>
-                             <button class="new_question_answer_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
-                             <button class="delete_question_answer_button"><img src="'+plusImgSrc+'" alt="" class="crud_but_img"></button>
 
                         </li>
+                        <div>
+                           <button class="new_question_answer_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+                             <button class="delete_question_answer_button"><img src="{% static 'images/delete.png'%}" alt="" class="crud_but_img"></button>
+                             </div>
                         <li>
                             <p>
                                 <input type="text" name="2" class="input_text">
@@ -106,9 +108,11 @@
                                     <input type="text" name="2_1" class="input_text">
                                 </label>
                             </p>
-                             <button class="new_question_answer_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
-                             <button class="delete_question_answer_button"><img src="'+plusImgSrc+'" alt="" class="crud_but_img"></button>
-                        </li>
+                             <div>
+                           <button class="new_question_answer_button"><img src="{% static 'images/plus.png'%}" alt="" class="crud_but_img"></button>
+                             <button class="delete_question_answer_button"><img src="{% static 'images/delete.png'%}" alt="" class="crud_but_img"></button>
+                             </div>
+                              </li>
                     </ol>
                 </div>
                 <div class="edit_buttons">
