--- a/educastick/teachersPage/static/css/stylehome.css
+++ b/educastick/teachersPage/static/css/stylehome.css
@@ -13,10 +13,16 @@ main{
 }
 
 .personal_information{
+  background-color: #ebecec;
+  border-radius: 5px;
   padding: 20px;
   font-size: 20px;
   margin: 0 auto;
   width: 69%;
+}
+
+hr{
+  border-color: #434242;
 }
 
 .group_title{
