--- a/educastick/teachersPage/static/css/styleindex.css
+++ b/educastick/teachersPage/static/css/styleindex.css
@@ -11,6 +11,7 @@
 
 .description_block{
   border-bottom: 5px solid #47ad48;
+  background-color: #ebecec;
   border-radius: 15px;
   position: relative;
   box-shadow: 0 0 10px -3px black;
@@ -33,7 +34,7 @@
 }
 
 .description_block:hover{
-  background-color: rgba(206, 206, 206, 0.1);
+  background-color: #96e197;
   transform: scale(1.005, 1.005);
   cursor: pointer;
 }
