--- a/educastick/teachersPage/static/css/stylegroups.css
+++ b/educastick/teachersPage/static/css/stylegroups.css
@@ -233,12 +233,29 @@ main{
   font-size: 20px;
 }
 
-.new_question_button{
+.new_question_button, .delete_question_button{
+  line-height: 45px;
   height: 50px;
+  width: 50px;
+}
+
+.new_question_answer_button, .delete_question_answer_button, .new_question_button, .delete_question_button{
+  padding: 5px;
+  border-radius: 2px;
+  display: inline-block;
+  background-color: #47ad48;
+  text-align: center;
+}
+
+.new_question_answer_button:hover, .delete_question_answer_button:hover, .new_question_button:hover, .delete_question_button:hover{
+  background-color: #434242;
 }
 
 .new_question_answer_button, .delete_question_answer_button{
+  line-height: 28px;
   height: 30px;
+  width: 30px;
+
 }
 
 .save_button{
@@ -248,6 +265,7 @@ main{
 }
 
 .input_text{
+  background-color: #ebecec;
   border-top: none;
   border-left: none;
   border-right: none;
