Сделала авторизацию и шаблоны, осталось подправить запросы на id пользователя(препода) и связать с преподами

--- a/educastick/teachersPage/templates/Create.html
+++ b/educastick/teachersPage/templates/Create.html
@@ -5,6 +5,9 @@
     <title>Add</title>
 </head>
 <body>
+
+{% include "include/header.html" %}
+
     <h1>Добавление объявления</h1>
     <div>
         <a href="{% url 'index' %)">Главная</a>
