--- a/educastick/teachersPage/templates/answers.html
+++ b/educastick/teachersPage/templates/answers.html
@@ -11,20 +11,9 @@
   <link rel="stylesheet" href="stylegroups.css">
 </head>
 <body>
-<header>
-  <div class="logo">
-    <a href="index.html"><img src="logo.png" id="logo" alt=""></a>
-  </div>
-  <div class="abutt">
-    <a href="#">Статистика</a>
-    <a href="#">Группы</a>
-    <a href="#">Тесты</a>
-    <a href="#">Ответы</a>
-  </div>
-  <div class="ava">
-    <img src="placeholder-man.png" alt="" id="ava">
-  </div>
-</header>
+
+{% include "include/header.html" %}
+
 <div class="wrapper">
   <div class="description_main">
     <h1>Загруженные ответы</h1>
