--- a/educastick/teachersPage/templates/statistic.html
+++ b/educastick/teachersPage/templates/statistic.html
@@ -6,6 +6,9 @@
     <title>Статистика</title>
 </head>
 <body>
+
+{% include "include/header.html" %}
+
 <h1>
     {{ count }}<br>
     {{ quality }}<br>
