--- a/educastick/teachersPage/templates/accountgrid.html
+++ b/educastick/teachersPage/templates/accountgrid.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -22,22 +23,27 @@
     <a href="#">Ответы</a>
   </div>
   <div class="ava">
-    <img src="placeholder-man.png" alt="" id="ava">
+      {% if user.is_authenticated %}
+        <a href="{% url 'account_logout'%}">Выход
+          <img src="{% static 'images/placeholder-man.png'%}" alt="" id="ava">
+        </a>
+      {% else %}
+      <a href="{% url 'account_login'%}">Вход</a>
+      {% endif%}
   </div>
 </header>
 <div class="wrapper">
   <div class="description_main">
     <h1>Личный кабинет</h1>
-    <p>Описание описание описание описание описание описание описание описание описание описание пива имва лоав итадвдав
-      идлавто длавт идлавт идвалодлв длваьир давлои зэрвэр.овржилвро ржпвад ьыжпрщл жпаыь ржпр ыжпдр юпбиь ыэро зыжро щваы
-      ароэы пажлы во эрдлы длрь дыавльп дл оыэадвлпр дывлр ывоо рваылр жывлдр овыьит ыдвоарт жаывшрп адывлр жыдвало
+    <p>Это Ваш личный кабинет. </p>
+    <p>В личном кабинете Вы можете видеть информацию о себе и о Ваших списках групп, редактировать их и удалять.
     </p>
   </div>
   <main>
 
     <div class="personal_information">
 
-      <img src="placeholder-man.png" alt="">
+      <img src="{% static 'images/placeholder-man.png'%}" alt="" class="account_img">
 
       <div class="information">
         <p>ФИО</p>
@@ -53,7 +59,7 @@
       <div class="group_title">
         <div class="list_of_groups">
           <h4>Список групп</h4>
-          <a href="#" class="groups_button"><img src="img/plusimage.png" alt="" id="plus"></a>
+          <a href="#" class="groups_button"><img src="{% static 'images/plusimage.png'%}" alt="" id="plus"></a>
         </div>
         <a href="#" hidden>Расписание</a>
       </div>
