Потихоньку доделываю визуалку (описание)

--- a/educastick/teachersPage/templates/index.html
+++ b/educastick/teachersPage/templates/index.html
@@ -18,14 +18,17 @@
 
 <div class="wrapper">
   <div class="description_main">
-    <h1>Educastick</h1>
-    <p>Описание описание описание описание описание описание описание описание описание описание пива имва лоав итадвдав
-      идлавто длавт идлавт идвалодлв длваьир давлои зэрвэр.овржилвро ржпвад ьыжпрщл жпаыь ржпр ыжпдр юпбиь ыэро зыжро щваы
-      ароэы пажлы во эрдлы длрь дыавльп дл оыэадвлпр дывлр ывоо рваылр жывлдр овыьит ыдвоарт жаывшрп адывлр жыдвало
-      жыдвларо жвыдлтпр шщавдыо длатр жыщ арывждаывор ываро жывдлоп жщавышп ывоимт жыщшвоп жэыщап длавп щжывао птажпы
-      овжзщп ывжтп жвдшаоыпр ывдалп выдап жваышоп вжаыдпло авьж овапит жваыв лпо ыавптж лтим вадлпо ыжвтапжд оподпоы адлпо
-      ажвыпо жщшоы алдпо ыдло.
+    <h1>Educastick - это</h1>
+    <p>Информационная система, которая позволит загружать фотографии с рукописным ответом и последующим преобразованием в печатный вариант и проверкой, просмотр прогресса и проблемных мест обучающегося и группы в целом для улучшения успеваемости и более эффективной работы
     </p>
+    <p>Страницы сайта:</p>
+    <ol>
+      <li>Страница статистики;</li>
+      <li>Страница групп;</li>
+      <li>Страница тестов;</li>
+      <li>Страница ответов.</li>
+    </ol>
+
   </div>
   <main>
 
