--- a/educastick/teachersPage/templates/include/header.html
+++ b/educastick/teachersPage/templates/include/header.html
@@ -5,17 +5,16 @@
     <a href="{% url 'main' %}"><img src="{% static 'images/logo.png'%}" id="logo" alt=""></a>
   </div>
   <div class="abutt">
-    <a href="#">Статистика</a>
+    <a href="{% url 'statistics' %}">Статистика</a>
     <a href="#">Группы</a>
-    <a href="#">Тесты</a>
-    <a href="#">Ответы</a>
+    <a href="{% url 'tests' %}">Тесты</a>
+    <a href="{% url 'answers' %}">Ответы</a>
   </div>
   <div class="ava">
     {% if user.is_authenticated %}
       <a href="{% url 'account_logout'%}">Выход
         <img src="{% static 'images/placeholder-man.png'%}" alt="" id="ava">
       </a>
-
     {% else %}
     <a href="{% url 'account_login'%}">Вход</a>
     {% endif%}
