--- a/educastick/teachersPage/templates/index.html
+++ b/educastick/teachersPage/templates/index.html
@@ -5,10 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Educastick</title>
-  <link rel="stylesheet" href="{% static 'css/normalize.css'%}">
-  <link rel="stylesheet" href="{% static 'css/style.css'%}">
-  <link rel="stylesheet" href="{% static 'css/main.css'%}">
-  <link rel="stylesheet" href="{% static 'css/header.css'%}">
+  {% include "include/links.html" %}
   <link rel="stylesheet" href="{% static 'css/styleindex.css'%}">
 
 </head>
@@ -43,12 +40,9 @@
         <div class="description_text">
           <h1>Статистика</h1>
           <p>
-            Описание описание описание описание описание описание описание описание описание описание пива имва лоав итадвдав
-            идлавто длавт идлавт идвалодлв длваьир давлои зэрвэр.овржилвро ржпвад ьыжпрщл жпаыь ржпр ыжпдр юпбиь ыэро зыжро щваы
-            ароэы пажлы во эрдлы длрь дыавльп дл оыэадвлпр дывлр ывоо рваылр жывлдр овыьит ыдвоарт жаывшрп адывлр жыдвало
-            жыдвларо жвыдлтпр шщавдыо длатр жыщ арывждаывор ываро жывдлоп жщавышп ывоимт жыщшвоп жэыщап длавп щжывао птажпы
-            овжзщп ывжтп жвдшаоыпр ывдалп выдап жваышоп вжаыдпло авьж овапит жваыв лпо ыавптж лтим вадлпо ыжвтапжд оподпоы адлпо
-            ажвыпо жщшоы алдпо ыдло.
+            На странице статистики у Вас есть возможность просматривать динамику правильности ответов группы,
+            теста или успеваемость конкретного ученика. Подобные данные позволят Вам увидеть какая тема или вопрос
+            вызывает наибольшие затруднения и скорректировать план работы.
           </p>
         </div>
 
@@ -67,12 +61,8 @@
       <div class="description_text">
         <h1>Группы</h1>
         <p>
-          Описание описание описание описание описание описание описание описание описание описание пива имва лоав итадвдав
-          идлавто длавт идлавт идвалодлв длваьир давлои зэрвэр.овржилвро ржпвад ьыжпрщл жпаыь ржпр ыжпдр юпбиь ыэро зыжро щваы
-          ароэы пажлы во эрдлы длрь дыавльп дл оыэадвлпр дывлр ывоо рваылр жывлдр овыьит ыдвоарт жаывшрп адывлр жыдвало
-          жыдвларо жвыдлтпр шщавдыо длатр жыщ арывждаывор ываро жывдлоп жщавышп ывоимт жыщшвоп жэыщап длавп щжывао птажпы
-          овжзщп ывжтп жвдшаоыпр ывдалп выдап жваышоп вжаыдпло авьж овапит жваыв лпо ыавптж лтим вадлпо ыжвтапжд оподпоы адлпо
-          ажвыпо жщшоы алдпо ыдло.
+          На странице групп Вы можете просматривать списки групп, вносить в них изменения,
+          а также добавлять новые и удалять уже существующие.
         </p>
       </div>
 
@@ -84,21 +74,17 @@
 
       <div class="description_block">
 
-      <div class="description_image">
-          <img src="{% static 'images/logo.png'%}" alt="">
-      </div>
+        <div class="description_image">
+            <img src="{% static 'images/logo.png'%}" alt="">
+        </div>
 
-      <div class="description_text">
-        <h1>Тесты</h1>
-        <p>
-          Описание описание описание описание описание описание описание описание описание описание пива имва лоав итадвдав
-          идлавто длавт идлавт идвалодлв длваьир давлои зэрвэр.овржилвро ржпвад ьыжпрщл жпаыь ржпр ыжпдр юпбиь ыэро зыжро щваы
-          ароэы пажлы во эрдлы длрь дыавльп дл оыэадвлпр дывлр ывоо рваылр жывлдр овыьит ыдвоарт жаывшрп адывлр жыдвало
-          жыдвларо жвыдлтпр шщавдыо длатр жыщ арывждаывор ываро жывдлоп жщавышп ывоимт жыщшвоп жэыщап длавп щжывао птажпы
-          овжзщп ывжтп жвдшаоыпр ывдалп выдап жваышоп вжаыдпло авьж овапит жваыв лпо ыавптж лтим вадлпо ыжвтапжд оподпоы адлпо
-          ажвыпо жщшоы алдпо ыдло.
-        </p>
-      </div>
+        <div class="description_text">
+          <h1>Тесты</h1>
+          <p>
+            На странице тестов Вы можете просматривать Ваши тесты, вносить в них изменения,
+            а также добавлять новые и удалять уже существующие.
+          </p>
+        </div>
 
       </div>
 
@@ -115,12 +101,7 @@
         <div class="description_text">
           <h1>Ответы</h1>
           <p>
-            Описание описание описание описание описание описание описание описание описание описание пива имва лоав итадвдав
-            идлавто длавт идлавт идвалодлв длваьир давлои зэрвэр.овржилвро ржпвад ьыжпрщл жпаыь ржпр ыжпдр юпбиь ыэро зыжро щваы
-            ароэы пажлы во эрдлы длрь дыавльп дл оыэадвлпр дывлр ывоо рваылр жывлдр овыьит ыдвоарт жаывшрп адывлр жыдвало
-            жыдвларо жвыдлтпр шщавдыо длатр жыщ арывждаывор ываро жывдлоп жщавышп ывоимт жыщшвоп жэыщап длавп щжывао птажпы
-            овжзщп ывжтп жвдшаоыпр ывдалп выдап жваышоп вжаыдпло авьж овапит жваыв лпо ыавптж лтим вадлпо ыжвтапжд оподпоы адлпо
-            ажвыпо жщшоы алдпо ыдло.
+            На странице ответов Вы можете просматривать ответы учеников, вносить в них изменения и удалять уже существующие.
           </p>
         </div>
 
@@ -129,9 +110,7 @@
     </div>
 
   </main>
-  <footer>
-footer
-  </footer>
+  {% include "include/footer.html" %}
 </div>
 </body>
 </html>
