--- a/educastick/teachersPage/templates/statistic.html
+++ b/educastick/teachersPage/templates/statistic.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Статистика</title>
+    {% include "include/links.html" %}
+    <link rel="stylesheet" href="{% static 'css/stylegroups.css'%}">
 </head>
 <body>
 
