--- a/educastick/teachersPage/templates/statistics.html
+++ b/educastick/teachersPage/templates/statistics.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Статистика</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="stylestatistics.css">
-  <link rel="stylesheet" href="stylegroups.css">
-  <link rel="stylesheet" href="stylefilter.css">
+    {% include "include/links.html" %}
+    <link rel="stylesheet" href="{% static 'css/stylegroups.css'%}">
+  <link rel="stylesheet" href="{% static 'css/stylefilter.css'%}">
+  <link rel="stylesheet" href="{% static 'css/stylestatistics.css'%}">
 </head>
 <body>
 
@@ -27,7 +25,7 @@
       </div>
       <br>
       <div class="tab_content">
-        <div class="groups">
+        <div class="elements">
           <div class="functional">
             <button class="filter">< Год ></button>
             <div  class="search">
@@ -40,7 +38,7 @@
             </div>
 
           </div>
-          <div class="group active" id="1">
+          <div class="element active" id="1">
             <input type="text" disabled class="inner_text" value="Группа 1">
             <input type="text" disabled class="inner_text" value="Человеков: 5">
             <input type="text" disabled class="inner_text" value="Контрольный тест" style="visibility: hidden">
@@ -51,27 +49,27 @@
             </div>
 
           </div>
-          <div class="active_group">
+          <div class="active_element">
             <div class="active_text">
               <p>Абсолютная успеваемость: 80.0%</p>
               <p>Качественная успеваемость: 80.0%</p>
             </div>
           </div>
 
-          <div class="active_group_choose">
-            <div class="group active">
+          <div class="active_element_choose">
+            <div class="element active">
               <input type="text" disabled class="inner_text" value="Тест">
               <input type="text" disabled class="inner_text" value="Устройство системы">
               <input type="text" disabled class="inner_text" value="Информатика">
               <input type="text" disabled class="inner_text" value="02.04.2022">
             </div>
-            <div class="active_group">
+            <div class="active_element">
               <div class="active_text">
                 <p>Модуль: Введение в информатику</p>
                 <p>Тема: Устройство системы</p>
               </div>
             </div>
-            <div class="group">
+            <div class="element">
               <input type="text" disabled class="inner_text" value="Тест">
               <input type="text" disabled class="inner_text" value="Алгоритмы">
               <input type="text" disabled class="inner_text" value="Информатика">
@@ -79,7 +77,7 @@
             </div>
           </div>
 
-          <div class="group"  id="2">
+          <div class="element"  id="2">
             <input type="text" disabled class="inner_text" value="Группа 2">
             <input type="text" disabled class="inner_text" value="Человеков: 6">
           </div>
@@ -96,5 +94,5 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="js/statisticsScript.js"></script>
+<script src="{% static 'js/statisticsScript.js'%}"></script>
 </html>
