--- a/educastick/teachersPage/templates/tests.html
+++ b/educastick/teachersPage/templates/tests.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Тесты</title>
-    <link rel="stylesheet" href="{% static 'css/normalize.css'%}">
-    <link rel="stylesheet" href="{% static 'css/main.css'%}">
-    <link rel="stylesheet" href="{% static 'css/header.css'%}">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    {% include "include/links.html" %}
     <link rel="stylesheet" href="{% static 'css/stylegroups.css'%}">
     <link rel="stylesheet" href="{% static 'css/stylefilter.css'%}">
 </head>
@@ -22,6 +19,7 @@
 <div class="wrapper">
     <div class="description_main">
         <h1>Тесты</h1>
+        {% if user.is_authenticated %}
         <div class="functional">
             <button class="filter">< Год ></button>
             <div class="search">
@@ -34,9 +32,17 @@
             </div>
 
         </div>
+        {% else %}
+        <div class="main_list">
+            <p>
+                Для просмотра тестов, пожалуйста, авторизуйтесь на сайте
+            </p>
+        </div>
+        {% endif %}
 
     </div>
     <main>
+        {% if user.is_authenticated %}
         <div class="main_list">
 
             <div class="element_add">
@@ -173,10 +179,9 @@
 
 
         </div>
+        {% endif %}
     </main>
-    <footer>
-        footer
-    </footer>
+    {% include "include/footer.html" %}
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
